methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:6: error: not found: value levebrosse
    levebrosse()
    ^SlugHunting:12: error: not found: value levebrosse
       levebrosse()
       ^SlugHunting:19: error: not found: value levebrosse
     levebrosse()
     ^