methods.slug.SlugHunting.scala.code
def hunt() {
  while (isFacingTrail()){
    baisseBrosse()
    avance()
    levebrosse()
  }
    gauche()
   if  (isFacingTrail){
       baisseBrosse()
       avance()
       levebrosse()
       }
 
   else {
     droite()  
     baisseBrosse()
     avance()
     levebrosse()
      }
 
}



def isFacingTrail():Boolean = {
    
  var verte: Boolean = false
  if (estFaceMur()){
    return false
  }
  avance()
  verte=getCouleurSol()==Color.green
  
  recule()
  return verte
}